# alfamp

./: .editorconfig  .gitattributes  .gitignore  README.md  SECURITY.md
.github/workflows/: build-launcher-v2.yml  build-launcher.yml  deploy.yml
compat-rage/: AlfaMP.RageMP.Compat.csproj  README.md
compat-rage/examples/hello-world/: HelloWorld.cs  HelloWorld.csproj
compat-rage/patches/client-rebrand/: 00-rebrand.patch  01-rebrand-deep.patch
compat-rage/patches/netcode/: 01-60hz-tickrate.patch  02-extended-vehicle-snapshot.patch  (+9 more)
compat-rage/src/: NAPI.cs
compat-rage/tool/: alfa-migrate.py  rage2alfa.py
docs/: ADMIN-AND-HOSTING.md  ARCHITECTURE.md  CONTRIBUTING.md  LEGAL.md  MAPS.md  MASTER-PLAN.md  MIGRATION-FROM-RAGE.md  NETCODE.md  ROADMAP.md  SECURITY.md  SERVER-LIFECYCLE.md  plan.md
game-server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  heartbeat.sh  server.cfg
infra/: 01_hardening.sh  02_install_stack.sh  03_setup_git_deploy.py  04_setup_gh_actions.py  05_setup_jwt_secret.py  06_install_docker.sh  07_fork_citizenfx.py  07b_push_citizenfx_bg.py  15_apply_netcode_quickwins.py  deploy_master.py  ssh_helper.py
launcher/: .build-trigger  .gitignore  README.md  index.html  package.json  splash.html  tsconfig.json  vite.config.ts
launcher/src/: App.tsx  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/icons/: _generate.py
launcher/src-tauri/src/: client.rs  gta.rs  lib.rs  main.rs
master-server/: .gitignore  README.md  package-lock.json  package.json  run.bat  tsconfig.json
master-server/src/: index.ts  seed.ts
tools/netcode-bench/: README.md  bench-hitch.js  bench-latency.js  bench-tickrate.js
(+31 files in other folders)
