[package]
name = "alfamp-launcher"
version = "0.1.14"
description = "Alfa MP launcher"
authors = ["Alfa MP team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "alfamp_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
dirs = "5"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
